fix:save title and content to state
Signed-off-by: Aakash <9267aakashsharma@gmail.com>

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @import "./fonts";
 @import "./variables";
+@import "./mixins";
 
 * {
   margin: 0;
@@ -16,7 +17,7 @@ body {
 
 body {
   font-size: $font-size;
-  font-family: "Graphik", sans-serif;
+  font-family: "Roboto", sans-serif;
   color: $text;
   text-rendering: optimizeLegibility;
   background-color: $background;
