fix(config):added textarea-autosize and other packages
Signed-off-by: Aakash <9267aakashsharma@gmail.com>

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -6,7 +6,8 @@ $text: #000;
 $text-alt: #1f1f1f;
 $background: #fff;
 $background-alt: #fafafa;
-$gray: #c4c4c4;
+$gray: #e9e7e7;
+$placeholder: #adadad;
 
 $font-size: 16px;
 $sidebar: 300px;
