--- a/src/index.scss
+++ b/src/index.scss
@@ -15,6 +15,15 @@ body {
   height: 100%;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "ProductSans", serif;
+}
+
 body {
   font-size: $font-size;
   font-family: "Roboto", sans-serif;
@@ -26,6 +35,7 @@ body {
 p {
   line-height: 130%;
   font-size: 1rem;
+  font-family: "Roboto", sans-serif;
 }
 
 a {
