--- a/src/pages/Dashboard/components/SingleNote/SingleNote.scss
+++ b/src/pages/Dashboard/components/SingleNote/SingleNote.scss
@@ -3,16 +3,75 @@
 @import "../../../../fonts";
 
 div.payO-note {
+  position: relative;
   box-sizing: border-box;
   box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.1),
     inset 0 -1px 0 rgba(0, 0, 0, 0.07);
   border: 1px solid $gray;
   border-radius: 5px;
   text-align: left;
+  div.check-icon {
+    position: absolute;
+    top: -24px;
+    left: -24px;
+    width: 48px;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    svg {
+      display: block;
+      margin: 0 auto;
+      transform: scale(1.5);
+    }
+  }
   h2 {
     padding: 4px 16px 12px 16px;
+    span {
+      float: right;
+      display: flex;
+      width: 32px;
+      height: 32px;
+      opacity: 0;
+      transition: opacity 0.3s ease-in-out;
+      img {
+        display: block;
+        margin: 0 auto;
+        transform: scale(1.2);
+      }
+
+      &:hover {
+        background-color: $gray;
+        border-radius: 50%;
+      }
+    }
   }
   div.content {
     padding: 4px 16px 12px 16px;
+    p {
+      white-space: pre-wrap;
+    }
+  }
+  div.noteoptions {
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+  }
+
+  &:hover {
+    div.noteoptions {
+      opacity: 1;
+      transition: opacity 0.3s ease-in-out;
+    }
+    div.check-icon {
+      opacity: 1;
+      transition: opacity 0.3s ease-in-out;
+    }
+    h2 {
+      span {
+        opacity: 1;
+        transition: opacity 0.3s ease-in-out;
+      }
+    }
   }
 }
