--- a/src/shared/components/NoteOptions/NoteOptions.scss
+++ b/src/shared/components/NoteOptions/NoteOptions.scss
@@ -26,4 +26,23 @@ div.payO-noteoptions {
       }
     }
   }
+  div.more-option {
+    position: relative;
+    span {
+      position: absolute;
+      display: block;
+      cursor: pointer;
+      padding: 0.25rem 0.75rem;
+      box-sizing: border-box;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+      border-radius: 0.5rem;
+      left: 0;
+      top: -100%;
+
+      &:hover {
+        background-color: $gray;
+      }
+    }
+  }
 }
