fix(SingleNote): Use imgUrl to note
Signed-off-by: Aakash <9267aakashsharma@gmail.com>

--- a/src/pages/Dashboard/components/SingleNote/SingleNote.scss
+++ b/src/pages/Dashboard/components/SingleNote/SingleNote.scss
@@ -52,6 +52,14 @@ div.payO-note {
     p {
       white-space: pre-wrap;
     }
+    a {
+      text-decoration: none;
+      color: $accent;
+    }
+    img {
+      width: 100%;
+      height: auto;
+    }
   }
   div.noteoptions {
     opacity: 0;
