fix(CreateNote): Added imgUrl
Signed-off-by: Aakash <9267aakashsharma@gmail.com>

--- a/src/pages/Dashboard/components/CreateNote/CreateNote.scss
+++ b/src/pages/Dashboard/components/CreateNote/CreateNote.scss
@@ -51,7 +51,6 @@ div.payO-createNote {
   div.content {
     position: relative;
     padding: 0 0.5rem;
-    display: flex;
 
     textarea {
       outline: none;
@@ -73,6 +72,10 @@ div.payO-createNote {
         color: $placeholder;
         font-weight: 550;
       }
+    }
+    img {
+      width: 240px;
+      height: auto;
     }
   }
 
