fix(Navbar): Styled Navbar component
Signed-off-by: Aakash <9267aakashsharma@gmail.com>

--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -5,11 +5,11 @@
 div.payO-dashboard {
   position: relative;
   .payO-grid {
-    margin-top: 200px;
+    margin-top: 4rem;
   }
   div.pinned-notes,
   div.unpinned-notes {
-    margin: 10rem auto;
+    margin: 0 auto 10rem;
     padding: 0 1rem;
 
     p {
