fix(chore): newline fixed
Signed-off-by: Aakash <9267aakashsharma@gmail.com>

--- a/src/pages/Dashboard/components/SingleNote/SingleNote.scss
+++ b/src/pages/Dashboard/components/SingleNote/SingleNote.scss
@@ -55,6 +55,9 @@ div.payO-note {
     a {
       text-decoration: none;
       color: $accent;
+      p {
+        white-space: pre-wrap;
+      }
     }
     img {
       width: 100%;
